tests/files/lexer_tests/should_fail/070.cmdr
// Lexer should throw an error when encountering an unknown escape (double quotes)
a = "This is an unknown escape: \y ";